frontend/test/should_pass/global_then_in_package_function.grg
#using "model.gm"

function f() : boolean
{
	return(true);
}

package Foo
{
	// was error: f already defined
	function f() : boolean
	{
		return(true);
	}
}
